[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/Title.gd" type="Script" id=2]
[ext_resource path="res://ui/FadeEffect.tscn" type="PackedScene" id=3]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 304.0
margin_bottom = 64.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Body" type="HBoxContainer" parent="Menu"]
margin_top = 68.0
margin_right = 304.0
margin_bottom = 146.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/Body"]
margin_right = 76.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Start" type="Button" parent="Menu/Body/Buttons"]
margin_top = 5.0
margin_right = 76.0
margin_bottom = 25.0
text = "Start"

[node name="Story" type="Button" parent="Menu/Body/Buttons"]
margin_top = 29.0
margin_right = 76.0
margin_bottom = 49.0
text = "Story"

[node name="Quit" type="Button" parent="Menu/Body/Buttons"]
margin_top = 53.0
margin_right = 76.0
margin_bottom = 73.0
text = "Quit"

[node name="Character" type="HBoxContainer" parent="Menu/Body"]
margin_left = 80.0
margin_right = 304.0
margin_bottom = 78.0
alignment = 1

[node name="Previous" type="Button" parent="Menu/Body/Character"]
margin_right = 76.0
margin_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/Body/Character/Previous"]
margin_right = 40.0
margin_bottom = 14.0
text = "previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Menu/Body/Character"]
margin_left = 80.0
margin_right = 144.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="DebugName" type="Label" parent="Menu/Body/Character/Portrait"]
margin_right = 40.0
margin_bottom = 14.0
text = "Racoon"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Menu/Body/Character"]
margin_left = 148.0
margin_right = 224.0
margin_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/Body/Character/Next"]
margin_left = -0.35849
margin_right = 39.6415
margin_bottom = 14.0
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionAuthor" type="Label" parent="Menu"]
margin_top = 150.0
margin_right = 304.0
margin_bottom = 164.0
text = "Made by SoKette for Ludum Dare 46"

[node name="FadeEffect" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="Menu/Body/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu/Body/Buttons/Story" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="Menu/Body/Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Menu/Body/Character/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="Menu/Body/Character/Next" to="." method="_on_Next_pressed"]
